{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 489,
  "lineage": "019fef09-4b5b-8c18-3607-56b7ea1b3afd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "production_1_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cbfa6bba4589dcbb",
            "arn": "arn:aws:ec2:ca-central-1:533266985417:instance/i-058711e3f31d5e159",
            "associate_public_ip_address": true,
            "availability_zone": "ca-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-058711e3f31d5e159",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07bc26d6cc8bfc823",
            "private_dns": "ip-10-0-2-5.ca-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.5",
            "public_dns": "ec2-35-183-42-43.ca-central-1.compute.amazonaws.com",
            "public_ip": "35.183.42.43",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-053c3658258dab006",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-070974ea3cde8f090",
            "tags": {
              "Name": "production-instance"
            },
            "tags_all": {
              "Name": "production-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e94c6a6c5aedff8a"
            ]
          },
          "dependencies": [
            "aws_db_instance.rds_master",
            "aws_db_subnet_group.database_subnet",
            "aws_security_group.database-sg",
            "aws_security_group.production-instance-sg",
            "aws_subnet.database_private_subnet",
            "aws_subnet.database_read_replica_private_subnet",
            "aws_subnet.ec2_1_public_subnet",
            "aws_vpc.infrastructure_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "production_2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cbfa6bba4589dcbb",
            "arn": "arn:aws:ec2:ca-central-1:533266985417:instance/i-0881daa8145ae5d58",
            "associate_public_ip_address": true,
            "availability_zone": "ca-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0881daa8145ae5d58",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06e85c0a95599a852",
            "private_dns": "ip-10-0-3-60.ca-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.60",
            "public_dns": "ec2-99-79-79-110.ca-central-1.compute.amazonaws.com",
            "public_ip": "99.79.79.110",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-007c5011a767428a8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c1f4c3f3788c15e8",
            "tags": {
              "Name": "production-instance"
            },
            "tags_all": {
              "Name": "production-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e94c6a6c5aedff8a"
            ]
          },
          "dependencies": [
            "aws_db_instance.rds_master",
            "aws_db_subnet_group.database_subnet",
            "aws_security_group.database-sg",
            "aws_security_group.production-instance-sg",
            "aws_subnet.database_private_subnet",
            "aws_subnet.database_read_replica_private_subnet",
            "aws_subnet.ec2_2_public_subnet",
            "aws_vpc.infrastructure_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tier_architecture_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:533266985417:internet-gateway/igw-06ed7393ec4f6f437",
            "id": "igw-06ed7393ec4f6f437",
            "owner_id": "533266985417",
            "tags": {
              "Name": "2-tier-architecture-igw"
            },
            "tags_all": {
              "Name": "2-tier-architecture-igw"
            },
            "vpc_id": "vpc-036542b7745f1b5be"
          },
          "dependencies": [
            "aws_vpc.infrastructure_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "application_loadbalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:533266985417:loadbalancer/app/application-loadbalancer/95fb90c0422e0e7f",
            "arn_suffix": "app/application-loadbalancer/95fb90c0422e0e7f",
            "desync_mitigation_mode": "defensive",
            "dns_name": "application-loadbalancer-1270225395.ca-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ca-central-1:533266985417:loadbalancer/app/application-loadbalancer/95fb90c0422e0e7f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "application-loadbalancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0e94c6a6c5aedff8a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-070974ea3cde8f090"
              },
              {
                "subnet_id": "subnet-0c1f4c3f3788c15e8"
              }
            ],
            "subnets": [
              "subnet-070974ea3cde8f090",
              "subnet-0c1f4c3f3788c15e8"
            ],
            "vpc_id": "vpc-036542b7745f1b5be",
            "xff_header_processing_mode": "append",
            "zone_id": "ZQSVJUPU6J1EY"
          },
          "dependencies": [
            "aws_security_group.production-instance-sg",
            "aws_subnet.ec2_1_public_subnet",
            "aws_subnet.ec2_2_public_subnet",
            "aws_vpc.infrastructure_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "external-elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:533266985417:listener/app/application-loadbalancer/95fb90c0422e0e7f/e6292b28497ec7e0",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ca-central-1:533266985417:targetgroup/target-group-alb/2f9db120d4bdc5d7",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ca-central-1:533266985417:listener/app/application-loadbalancer/95fb90c0422e0e7f/e6292b28497ec7e0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ca-central-1:533266985417:loadbalancer/app/application-loadbalancer/95fb90c0422e0e7f",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.application_loadbalancer",
            "aws_lb_target_group.target_group_alb",
            "aws_security_group.production-instance-sg",
            "aws_subnet.ec2_1_public_subnet",
            "aws_subnet.ec2_2_public_subnet",
            "aws_vpc.infrastructure_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:533266985417:targetgroup/target-group-alb/2f9db120d4bdc5d7",
            "arn_suffix": "targetgroup/target-group-alb/2f9db120d4bdc5d7",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ca-central-1:533266985417:targetgroup/target-group-alb/2f9db120d4bdc5d7",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "target-group-alb",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-036542b7745f1b5be"
          },
          "dependencies": [
            "aws_vpc.infrastructure_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attachment1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ca-central-1:533266985417:targetgroup/target-group-alb/2f9db120d4bdc5d7-20240314041228218500000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ca-central-1:533266985417:targetgroup/target-group-alb/2f9db120d4bdc5d7",
            "target_id": "i-058711e3f31d5e159"
          },
          "dependencies": [
            "aws_db_instance.rds_master",
            "aws_db_subnet_group.database_subnet",
            "aws_instance.production_1_instance",
            "aws_lb_target_group.target_group_alb",
            "aws_security_group.database-sg",
            "aws_security_group.production-instance-sg",
            "aws_subnet.database_private_subnet",
            "aws_subnet.database_read_replica_private_subnet",
            "aws_subnet.ec2_1_public_subnet",
            "aws_vpc.infrastructure_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attachment2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ca-central-1:533266985417:targetgroup/target-group-alb/2f9db120d4bdc5d7-20240314041227830800000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ca-central-1:533266985417:targetgroup/target-group-alb/2f9db120d4bdc5d7",
            "target_id": "i-0881daa8145ae5d58"
          },
          "dependencies": [
            "aws_db_instance.rds_master",
            "aws_db_subnet_group.database_subnet",
            "aws_instance.production_2_instance",
            "aws_lb_target_group.target_group_alb",
            "aws_security_group.database-sg",
            "aws_security_group.production-instance-sg",
            "aws_subnet.database_private_subnet",
            "aws_subnet.database_read_replica_private_subnet",
            "aws_subnet.ec2_2_public_subnet",
            "aws_vpc.infrastructure_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "infrastructure_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:533266985417:route-table/rtb-02efade457ec95a4d",
            "id": "rtb-02efade457ec95a4d",
            "owner_id": "533266985417",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06ed7393ec4f6f437",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-036542b7745f1b5be"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.tier_architecture_igw",
            "aws_vpc.infrastructure_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route-ec2-1-subnet-to-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-096272e267320507e",
            "route_table_id": "rtb-02efade457ec95a4d",
            "subnet_id": "subnet-070974ea3cde8f090"
          },
          "dependencies": [
            "aws_internet_gateway.tier_architecture_igw",
            "aws_route_table.infrastructure_route_table",
            "aws_subnet.ec2_1_public_subnet",
            "aws_vpc.infrastructure_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route-ec2-2-subnet-to-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-004e08ab2bd32a0bb",
            "route_table_id": "rtb-02efade457ec95a4d",
            "subnet_id": "subnet-0c1f4c3f3788c15e8"
          },
          "dependencies": [
            "aws_internet_gateway.tier_architecture_igw",
            "aws_route_table.infrastructure_route_table",
            "aws_subnet.ec2_2_public_subnet",
            "aws_vpc.infrastructure_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:533266985417:security-group/sg-0ae1d0cb79339b28a",
            "description": "security  group for database to allow traffic on port 3306 and from ec2 production security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ae1d0cb79339b28a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow traffic from port 3306 and from ec2 production security group",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e94c6a6c5aedff8a"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "database-sg",
            "name_prefix": "",
            "owner_id": "533266985417",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-036542b7745f1b5be"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.production-instance-sg",
            "aws_vpc.infrastructure_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:533266985417:security-group/sg-05e916e983b8bc48e",
            "description": "Allow EFS PORT",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05e916e983b8bc48e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "EFS mount target",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e94c6a6c5aedff8a"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "efs security group",
            "name_prefix": "",
            "owner_id": "533266985417",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-036542b7745f1b5be"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.production-instance-sg",
            "aws_vpc.infrastructure_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "production-instance-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:533266985417:security-group/sg-0e94c6a6c5aedff8a",
            "description": "Security from who allow inbound traffic on port 22 and 9090",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e94c6a6c5aedff8a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "production-instance-sg",
            "name_prefix": "",
            "owner_id": "533266985417",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-036542b7745f1b5be"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.infrastructure_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:533266985417:subnet/subnet-037129f281c889bc4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-037129f281c889bc4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533266985417",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "database private subnet"
            },
            "tags_all": {
              "Name": "database private subnet"
            },
            "vpc_id": "vpc-036542b7745f1b5be"
          },
          "dependencies": [
            "aws_vpc.infrastructure_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database_read_replica_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:533266985417:subnet/subnet-09ac6cdf81b1dab26",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09ac6cdf81b1dab26",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533266985417",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "database read replica private subnet"
            },
            "tags_all": {
              "Name": "database read replica private subnet"
            },
            "vpc_id": "vpc-036542b7745f1b5be"
          },
          "dependencies": [
            "aws_vpc.infrastructure_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ec2_1_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:533266985417:subnet/subnet-070974ea3cde8f090",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-070974ea3cde8f090",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "533266985417",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "first ec2 public subnet"
            },
            "tags_all": {
              "Name": "first ec2 public subnet"
            },
            "vpc_id": "vpc-036542b7745f1b5be"
          },
          "dependencies": [
            "aws_vpc.infrastructure_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ec2_2_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:533266985417:subnet/subnet-0c1f4c3f3788c15e8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c1f4c3f3788c15e8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "533266985417",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "second ec2 public subnet"
            },
            "tags_all": {
              "Name": "second ec2 public subnet"
            },
            "vpc_id": "vpc-036542b7745f1b5be"
          },
          "dependencies": [
            "aws_vpc.infrastructure_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "infrastructure_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:533266985417:vpc/vpc-036542b7745f1b5be",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06f1d00a1fea41be0",
            "default_route_table_id": "rtb-014c2bc2c071f56e4",
            "default_security_group_id": "sg-0e367519850f52a5b",
            "dhcp_options_id": "dopt-073e75da0a953ef16",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-036542b7745f1b5be",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-014c2bc2c071f56e4",
            "owner_id": "533266985417",
            "tags": {
              "Name": "2-tier-architecture-vpc"
            },
            "tags_all": {
              "Name": "2-tier-architecture-vpc"
            }
          }
        }
      ]
    }
  ]
}